--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "type": "module",
   "version": "1.0.1",
   "engines": {
-    "node": "^18.0.0 || ^20.0.0"
+    "node": "^18.18.0 || ^20.9.0 || >=21.1.0"
   },
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
+    "build:tsc": "vue-tsc --noEmit && vite build",
     "report": "cross-env REPORT=true npm run build",
     "preview": "vite preview",
     "serve:test": "http-server ./dist-test -o",
@@ -19,7 +20,7 @@
     "lint": "npm-run-all -s lint:tsc lint:eslint lint:stylelint",
     "lint:tsc": "vue-tsc",
     "lint:eslint": "eslint . --cache --fix",
-    "lint:stylelint": "stylelint src/**/*.{css,scss,vue} --cache --fix --allow-empty-input"
+    "lint:stylelint": "stylelint \"src/**/*.{css,scss,vue}\" --cache --fix"
   },
   "dependencies": {
     "@codemirror/lang-java": "^6.0.1",
@@ -30,11 +31,11 @@
     "@vueuse/core": "^10.7.2",
     "@vueuse/integrations": "^10.7.2",
     "add": "^2.0.6",
-    "axios": "^1.6.7",
+    "axios": "^1.7.2",
     "codemirror": "^6.0.1",
-    "element-plus": "^2.5.5",
+    "element-plus": "^2.7.5",
     "eruda": "^3.0.1",
-    "floating-vue": "2.0.0-beta.24",
+    "floating-vue": "5.2.2",
     "highlight.js": "^11.9.0",
     "hotkeys-js": "^3.13.7",
     "js-base64": "^3.7.6",
@@ -42,73 +43,73 @@
     "mitt": "^3.0.1",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
-    "overlayscrollbars-vue": "^0.5.7",
+    "overlayscrollbars-vue": "^0.5.9",
     "path-browserify": "^1.0.1",
-    "path-to-regexp": "^6.2.1",
+    "path-to-regexp": "^6.2.2",
     "pinia": "^2.1.7",
-    "qs": "^6.11.2",
+    "qs": "^6.12.1",
     "sortablejs": "^1.15.2",
     "vconsole": "^3.15.1",
-    "vue": "^3.4.19",
+    "vue": "^3.4.29",
     "vue-codemirror": "^6.1.1",
-    "vue-i18n": "^9.9.1",
+    "vue-i18n": "^9.13.1",
     "vue-json-pretty": "^2.3.0",
-    "vue-router": "^4.2.5",
+    "vue-router": "^4.3.3",
     "vue3-blocks-tree": "^0.6.1",
-    "vxe-table": "^4.5.18",
+    "vxe-table": "^4.7.16",
     "vxe-table-plugin-element": "^4.0.0",
-    "xe-utils": "^3.5.20"
+    "xe-utils": "^3.5.27"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "1.0.0-beta.29",
-    "@iconify/json": "^2.2.183",
-    "@iconify/vue": "^4.1.1",
+    "@antfu/eslint-config": "^2.21.1",
+    "@iconify/json": "^2.2.219",
+    "@iconify/vue": "^4.1.2",
     "@stylistic/stylelint-config": "^1.0.1",
     "@types/lodash-es": "^4.17.12",
     "@types/mockjs": "^1.0.10",
     "@types/nprogress": "^0.2.3",
     "@types/path-browserify": "^1.0.2",
-    "@types/qs": "^6.9.11",
-    "@types/sortablejs": "^1.15.7",
-    "@unocss/eslint-plugin": "^0.58.5",
-    "@vitejs/plugin-legacy": "^5.3.0",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "archiver": "^6.0.1",
-    "autoprefixer": "^10.4.17",
+    "@types/qs": "^6.9.15",
+    "@types/sortablejs": "^1.15.8",
+    "@unocss/eslint-plugin": "^0.61.0",
+    "@vitejs/plugin-legacy": "^5.4.1",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "@vitejs/plugin-vue-jsx": "^4.0.0",
+    "archiver": "^7.0.1",
+    "autoprefixer": "^10.4.19",
     "boxen": "^7.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
-    "esno": "^0.17.0",
+    "eslint": "^9.5.0",
+    "esno": "^4.7.0",
     "http-server": "^14.1.1",
-    "inquirer": "^9.2.14",
-    "lint-staged": "^15.2.2",
-    "npm-run-all": "^4.1.5",
-    "picocolors": "^1.0.0",
+    "inquirer": "^9.2.23",
+    "lint-staged": "^15.2.7",
+    "npm-run-all2": "^6.2.0",
+    "picocolors": "^1.0.1",
     "plop": "^4.0.1",
     "postcss-html": "^1.6.0",
     "rollup": "^3.29.4",
     "rollup-plugin-visualizer": "^5.12.0",
-    "sass": "^1.70.0",
-    "stylelint": "^16.2.1",
-    "stylelint-config-recess-order": "^4.6.0",
-    "stylelint-config-standard-scss": "^13.0.0",
+    "sass": "^1.77.5",
+    "stylelint": "^16.6.1",
+    "stylelint-config-recess-order": "^5.0.1",
+    "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-scss": "^6.1.0",
-    "svgo": "^3.2.0",
+    "stylelint-scss": "^6.3.1",
+    "svgo": "^3.3.2",
     "terser": "^5.27.1",
-    "typescript": "^5.3.3",
-    "unocss": "^0.58.5",
-    "unplugin-auto-import": "^0.16.7",
-    "unplugin-turbo-console": "^1.3.0",
-    "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.1.3",
+    "typescript": "^5.4.5",
+    "unocss": "^0.61.0",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-turbo-console": "^1.8.6",
+    "unplugin-vue-components": "^0.27.0",
+    "vite": "^5.3.1",
     "vite-plugin-banner": "^0.7.1",
-    "vite-plugin-compression2": "^0.12.0",
+    "vite-plugin-compression2": "^1.1.1",
     "vite-plugin-fake-server": "^2.1.1",
     "vite-plugin-pwa": "^0.17.5",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "^7.0.14",
-    "vue-tsc": "^1.8.27"
+    "vite-plugin-vue-devtools": "^7.2.1",
+    "vue-tsc": "^2.0.21"
   }
 }
