--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "useDefineForClassFields": true,
     "baseUrl": "./",
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
     "paths": {
       "@/*": [
         "src/*"
