--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@imengyu/vue3-context-menu": "^1.4.2",
     "@tinymce/tinymce-vue": "^6.0.1",
     "@visactor/vchart": "^1.11.10",
+    "@vueuse/components": "^11.0.0",
     "@vueuse/core": "^10.11.0",
     "@vueuse/integrations": "^10.11.0",
     "@vxe-ui/plugin-render-element": "^4.0.5",
