--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "picocolors": "^1.0.1",
     "plop": "^4.0.1",
     "postcss": "^8.4.40",
+    "postcss-nested": "^6.2.0",
     "rollup": "^3.29.4",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.77.8",
