--- a/package.json
+++ b/package.json
@@ -38,21 +38,21 @@
     "@imengyu/vue3-context-menu": "^1.4.2",
     "@tinymce/tinymce-vue": "^6.0.1",
     "@visactor/vchart": "^1.11.10",
-    "@vueuse/components": "^11.0.0",
-    "@vueuse/core": "^10.11.0",
-    "@vueuse/integrations": "^10.11.0",
+    "@vueuse/components": "^11.0.3",
+    "@vueuse/core": "^11.0.3",
+    "@vueuse/integrations": "^11.0.3",
     "@vxe-ui/plugin-render-element": "^4.0.5",
     "add": "^2.0.6",
     "animate.css": "^4.1.1",
-    "axios": "^1.7.3",
+    "axios": "^1.7.7",
     "bytemd": "^1.21.0",
     "codemirror": "^6.0.1",
-    "dayjs": "^1.11.12",
+    "dayjs": "^1.11.13",
     "defu": "^6.1.4",
     "disable-devtool": "^0.3.7",
     "echarts": "^5.5.1",
-    "element-plus": "^2.7.8",
-    "eruda": "^3.2.1",
+    "element-plus": "^2.8.1",
+    "eruda": "^3.2.3",
     "floating-vue": "5.2.2",
     "highlight.js": "^11.9.0",
     "hotkeys-js": "^3.13.7",
@@ -66,7 +66,7 @@
     "overlayscrollbars-vue": "^0.5.9",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^7.1.0",
-    "pinia": "^2.2.0",
+    "pinia": "^2.2.2",
     "pinyin-pro": "^3.24.2",
     "print-js": "^1.6.0",
     "qrcode": "^1.5.3",
@@ -80,7 +80,7 @@
     "tinymce": "^7.2.1",
     "v-wave": "^2.0.0",
     "vconsole": "^3.15.1",
-    "vue": "^3.4.35",
+    "vue": "^3.4.38",
     "vue-codemirror": "^6.1.1",
     "vue-currency-input": "^3.1.0",
     "vue-esign": "^1.1.4",
@@ -88,70 +88,71 @@
     "vue-i18n": "^9.13.1",
     "vue-json-pretty": "^2.3.0",
     "vue-m-message": "^4.0.2",
-    "vue-router": "^4.4.2",
+    "vue-router": "^4.4.3",
     "vue3-blocks-tree": "^0.6.1",
     "vue3-count-to": "^1.1.2",
     "vxe-table": "^4.7.61",
     "xe-utils": "^3.5.28"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.24.1",
-    "@iconify/json": "^2.2.233",
+    "@antfu/eslint-config": "2.24.1",
+    "@iconify/json": "^2.2.243",
     "@iconify/vue": "^4.1.2",
     "@stylistic/stylelint-config": "^2.0.0",
     "@types/lodash-es": "^4.17.12",
     "@types/mockjs": "^1.0.10",
     "@types/nprogress": "^0.2.3",
-    "@types/path-browserify": "^1.0.2",
+    "@types/path-browserify": "^1.0.3",
     "@types/qrcode": "^1.5.5",
     "@types/qs": "^6.9.15",
     "@types/sortablejs": "^1.15.8",
     "@types/splitpanes": "^2.2.6",
-    "@unocss/eslint-plugin": "^0.61.9",
-    "@vitejs/plugin-legacy": "^5.4.1",
-    "@vitejs/plugin-vue": "^5.1.2",
-    "@vitejs/plugin-vue-jsx": "^4.0.0",
+    "@unocss/eslint-plugin": "^0.62.3",
+    "@vitejs/plugin-legacy": "^5.4.2",
+    "@vitejs/plugin-vue": "^5.1.3",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
     "archiver": "^7.0.1",
     "autoprefixer": "^10.4.20",
-    "boxen": "^7.1.1",
+    "boxen": "^8.0.1",
     "cross-env": "^7.0.3",
-    "eslint": "^9.8.0",
+    "eslint": "^9.9.1",
     "esno": "^4.7.0",
     "fs-extra": "^11.2.0",
     "http-server": "^14.1.1",
-    "inquirer": "^10.1.6",
-    "lint-staged": "^15.2.8",
+    "inquirer": "^10.1.8",
+    "lint-staged": "^15.2.9",
     "npm-run-all2": "^6.2.2",
     "picocolors": "^1.0.1",
     "plop": "^4.0.1",
-    "postcss": "^8.4.40",
+    "postcss": "^8.4.42",
     "postcss-nested": "^6.2.0",
     "rollup": "^3.29.4",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.77.8",
     "simple-git-hooks": "^2.11.1",
-    "stylelint": "^16.8.1",
-    "stylelint-config-recess-order": "^5.0.1",
+    "stylelint": "^16.9.0",
+    "stylelint-config-recess-order": "^5.1.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-scss": "^6.4.1",
+    "stylelint-scss": "^6.5.1",
     "svgo": "^3.3.2",
     "terser": "^5.27.1",
     "typescript": "^5.5.4",
-    "unocss": "^0.61.9",
+    "unocss": "^0.62.3",
+    "unocss-preset-scrollbar": "^0.3.1",
     "unplugin-auto-import": "^0.18.2",
     "unplugin-turbo-console": "^1.10.1",
-    "unplugin-vue-components": "^0.27.3",
-    "vite": "^5.3.5",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.2",
     "vite-plugin-banner": "^0.7.1",
-    "vite-plugin-compression2": "^1.1.3",
+    "vite-plugin-compression2": "^1.2.0",
     "vite-plugin-fake-server": "^2.1.1",
     "vite-plugin-pages": "^0.32.3",
     "vite-plugin-pwa": "^0.17.5",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "^7.3.7",
+    "vite-plugin-vue-devtools": "^7.3.9",
     "vite-plugin-vue-meta-layouts": "^0.4.3",
-    "vue-tsc": "^2.0.29"
+    "vue-tsc": "^2.1.4"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged",
