--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "unplugin-turbo-console": "^1.10.1",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.2",
+    "vite-plugin-app-loading": "^0.3.0",
     "vite-plugin-banner": "^0.7.1",
     "vite-plugin-compression2": "^1.2.0",
     "vite-plugin-fake-server": "^2.1.1",
