--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "resolveJsonModule": true,
     "types": [
       "vite/client",
+      "vite-plugin-app-loading/client",
       "vite-plugin-pages/client",
       "vite-plugin-vue-meta-layouts/client",
       "element-plus/global"
