--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@headlessui/vue": "^1.7.22",
     "@imengyu/vue3-context-menu": "^1.4.2",
     "@tinymce/tinymce-vue": "^6.0.1",
-    "@visactor/vchart": "^1.11.10",
+    "@visactor/vchart": "^1.12.1",
     "@vueuse/components": "^11.0.3",
     "@vueuse/core": "^11.0.3",
     "@vueuse/integrations": "^11.0.3",
@@ -68,33 +68,33 @@
     "pinia": "^2.2.2",
     "pinyin-pro": "^3.24.2",
     "print-js": "^1.6.0",
-    "qrcode": "^1.5.3",
+    "qrcode": "^1.5.4",
     "qs": "^6.13.0",
     "scule": "^1.3.0",
     "sortablejs": "^1.15.2",
     "spinkit": "^2.0.1",
     "splitpanes": "^3.1.5",
-    "swiper": "^11.1.9",
+    "swiper": "^11.1.11",
     "timeago.js": "^4.0.2",
-    "tinymce": "^7.2.1",
+    "tinymce": "^7.3.0",
     "v-wave": "^2.0.0",
     "vconsole": "^3.15.1",
-    "vue": "^3.4.38",
+    "vue": "^3.5.2",
     "vue-codemirror": "^6.1.1",
     "vue-currency-input": "^3.1.0",
     "vue-esign": "^1.1.4",
     "vue-hooks-plus": "^2.2.1",
-    "vue-i18n": "^9.13.1",
+    "vue-i18n": "^9.14.0",
     "vue-json-pretty": "^2.3.0",
     "vue-m-message": "^4.0.2",
     "vue-router": "^4.4.3",
     "vue3-blocks-tree": "^0.6.1",
     "vue3-count-to": "^1.1.2",
-    "vxe-table": "^4.7.61",
-    "xe-utils": "^3.5.28"
+    "vxe-table": "^4.7.16",
+    "xe-utils": "^3.5.30"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "2.24.1",
+    "@antfu/eslint-config": "^2.27.3",
     "@iconify/json": "^2.2.243",
     "@iconify/vue": "^4.1.2",
     "@stylistic/stylelint-config": "^2.0.0",
