--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "postcss-nested": "^6.2.0",
     "rollup": "^3.29.4",
     "rollup-plugin-visualizer": "^5.12.0",
-    "sass": "^1.79.2",
+    "sass-embedded": "^1.79.3",
     "simple-git-hooks": "^2.11.1",
     "stylelint": "^16.9.0",
     "stylelint-config-recess-order": "^5.1.0",
