--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "1.0.1",
   "private": true,
+  "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca",
   "engines": {
     "node": "^20.9.0 || >=21.1.0"
   },
@@ -46,6 +47,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "bytemd": "^1.21.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
     "cz-git": "^1.9.4",
@@ -73,6 +75,7 @@
     "print-js": "^1.6.0",
     "qrcode": "^1.5.4",
     "qs": "^6.13.0",
+    "radix-vue": "^1.9.6",
     "scule": "^1.3.0",
     "sortablejs": "^1.15.3",
     "spinkit": "^2.0.1",
@@ -140,8 +143,9 @@
     "stylelint-scss": "^6.7.0",
     "svgo": "^3.3.2",
     "terser": "^5.27.1",
-    "typescript": "^5.6.2",
+    "typescript": "5.5.4",
     "unocss": "^0.62.4",
+    "unocss-preset-animations": "^1.1.0",
     "unocss-preset-scrollbar": "^0.3.1",
     "unplugin-auto-import": "^0.18.3",
     "unplugin-turbo-console": "^1.10.2",
