--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "type": "module",
   "version": "1.0.1",
   "private": true,
-  "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca",
+  "packageManager": "pnpm@9.12.0",
   "engines": {
     "node": "^20.9.0 || >=21.1.0"
   },
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc -b && vite build",
     "build:test": "vue-tsc && vite build --mode test",
     "report": "cross-env REPORT=true npm run build",
     "preview": "vite preview",
@@ -32,17 +32,17 @@
     "@bytemd/plugin-gfm": "^1.21.0",
     "@bytemd/vue-next": "^1.21.0",
     "@codemirror/lang-java": "^6.0.1",
-    "@codemirror/lang-javascript": "^6.2.1",
+    "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@headlessui/vue": "^1.7.23",
-    "@imengyu/vue3-context-menu": "^1.4.2",
-    "@tanstack/vue-store": "^0.5.5",
-    "@tinymce/tinymce-vue": "^6.0.1",
-    "@visactor/vchart": "^1.12.6",
+    "@imengyu/vue3-context-menu": "^1.4.3",
+    "@tanstack/vue-store": "^0.5.6",
+    "@tinymce/tinymce-vue": "^6.1.0",
+    "@visactor/vchart": "^1.12.9",
     "@vueuse/components": "^11.1.0",
     "@vueuse/core": "^11.1.0",
     "@vueuse/integrations": "^11.1.0",
-    "@vxe-ui/plugin-render-element": "^4.0.5",
+    "@vxe-ui/plugin-render-element": "^4.0.7",
     "add": "^2.0.6",
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
@@ -50,17 +50,17 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
-    "cz-git": "^1.9.4",
+    "cz-git": "^1.10.1",
     "dayjs": "^1.11.13",
     "defu": "^6.1.4",
-    "disable-devtool": "^0.3.7",
+    "disable-devtool": "^0.3.8",
     "echarts": "^5.5.1",
-    "element-plus": "^2.8.3",
-    "eruda": "^3.3.0",
+    "element-plus": "^2.8.6",
+    "eruda": "^3.4.0",
     "floating-vue": "5.2.2",
-    "highlight.js": "^11.9.0",
+    "highlight.js": "^11.10.0",
     "hotkeys-js": "^3.13.7",
-    "js-base64": "^3.7.6",
+    "js-base64": "^3.7.7",
     "lodash-es": "^4.17.21",
     "medium-zoom": "^1.1.0",
     "mitt": "^3.0.1",
@@ -69,40 +69,40 @@
     "overlayscrollbars": "^2.10.0",
     "overlayscrollbars-vue": "^0.5.9",
     "path-browserify": "^1.0.1",
-    "path-to-regexp": "^8.1.0",
-    "pinia": "^2.2.2",
-    "pinyin-pro": "^3.24.2",
+    "path-to-regexp": "^8.2.0",
+    "pinia": "^2.2.4",
+    "pinyin-pro": "^3.25.0",
     "print-js": "^1.6.0",
     "qrcode": "^1.5.4",
     "qs": "^6.13.0",
-    "radix-vue": "^1.9.6",
+    "radix-vue": "^1.9.7",
     "scule": "^1.3.0",
     "sortablejs": "^1.15.3",
     "spinkit": "^2.0.1",
     "splitpanes": "^3.1.5",
     "swiper": "^11.1.14",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.5.4",
     "timeago.js": "^4.0.2",
-    "tinymce": "^7.3.0",
+    "tinymce": "^7.4.1",
     "v-wave": "^3.0.2",
     "vconsole": "^3.15.1",
-    "vue": "^3.5.7",
+    "vue": "^3.5.12",
     "vue-codemirror": "^6.1.1",
     "vue-currency-input": "^3.1.0",
     "vue-esign": "^1.1.4",
     "vue-hooks-plus": "^2.2.1",
-    "vue-i18n": "^10.0.1",
-    "vue-json-pretty": "^2.3.0",
+    "vue-i18n": "^10.0.4",
+    "vue-json-pretty": "^2.4.0",
     "vue-m-message": "^4.0.2",
     "vue-router": "^4.4.5",
-    "vue3-blocks-tree": "^0.6.1",
+    "vue3-blocks-tree": "^0.6.2",
     "vue3-count-to": "^1.1.2",
-    "vxe-table": "^4.7.16",
-    "xe-utils": "^3.5.30"
+    "vxe-table": "^4.7.95",
+    "xe-utils": "^3.5.31"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.7.1",
-    "@iconify/json": "^2.2.251",
+    "@antfu/eslint-config": "^3.8.0",
+    "@iconify/json": "^2.2.263",
     "@iconify/vue": "^4.1.2",
     "@stylistic/stylelint-config": "^2.0.0",
     "@types/lodash-es": "^4.17.12",
@@ -121,44 +121,45 @@
     "autoprefixer": "^10.4.20",
     "boxen": "^8.0.1",
     "cross-env": "^7.0.3",
-    "eslint": "^9.11.0",
-    "esno": "^4.7.0",
+    "eslint": "^9.13.0",
+    "esno": "^4.8.0",
     "fs-extra": "^11.2.0",
     "http-server": "^14.1.1",
-    "inquirer": "^11.0.2",
+    "inquirer": "^9.3.7",
     "lint-staged": "^15.2.10",
-    "npm-run-all2": "^6.2.3",
-    "picocolors": "^1.1.0",
+    "npm-run-all2": "^6.2.6",
+    "picocolors": "^1.1.1",
     "plop": "^4.0.1",
     "postcss": "^8.4.47",
     "postcss-nested": "^6.2.0",
-    "rollup": "^3.29.4",
+    "rollup": "^3.29.5",
     "rollup-plugin-visualizer": "^5.12.0",
-    "sass-embedded": "^1.79.3",
+    "sass-embedded": "^1.80.2",
     "simple-git-hooks": "^2.11.1",
-    "stylelint": "^16.9.0",
-    "stylelint-config-recess-order": "^5.1.0",
+    "stylelint": "^16.10.0",
+    "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-scss": "^6.7.0",
+    "stylelint-scss": "^6.8.1",
     "svgo": "^3.3.2",
-    "terser": "^5.27.1",
+    "terser": "^5.36.0",
     "typescript": "5.5.4",
     "unocss": "^0.62.4",
     "unocss-preset-animations": "^1.1.0",
     "unocss-preset-scrollbar": "^0.3.1",
     "unplugin-auto-import": "^0.18.3",
-    "unplugin-turbo-console": "^1.10.2",
+    "unplugin-turbo-console": "^1.10.4",
     "unplugin-vue-components": "^0.27.4",
-    "vite": "^5.4.6",
+    "vite": "^5.4.10",
     "vite-plugin-app-loading": "^0.3.0",
+    "vite-plugin-archiver": "^0.1.1",
     "vite-plugin-banner": "^0.8.0",
     "vite-plugin-compression2": "^1.3.0",
     "vite-plugin-fake-server": "^2.1.2",
     "vite-plugin-pages": "^0.32.3",
     "vite-plugin-pwa": "^0.17.5",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "^7.4.5",
+    "vite-plugin-vue-devtools": "^7.5.4",
     "vite-plugin-vue-meta-layouts": "^0.4.3",
     "vue-tsc": "^2.1.6"
   },
