--- a/.env.development
+++ b/.env.development
@@ -11,7 +11,7 @@ VITE_APP_DISABLE_DEVTOOL = false
 
 # 是否开启代理
 VITE_OPEN_PROXY = false
-VITE_BUILD_PWA = false
+VITE_BUILD_PWA = true
 # 是否开启开发者工具
 VITE_OPEN_DEVTOOLS = true
 
