--- a/.env.production
+++ b/.env.production
@@ -20,4 +20,4 @@ VITE_BUILD_COMPRESS = gzip,brotli
 # 是否在打包后生成存档，支持 zip 和 tar
 VITE_BUILD_ARCHIVE =
 # 是否在打包时候生成PWA
-VITE_BUILD_PWA = true
+VITE_BUILD_PWA = false
