--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vue-tsc && vite build",
     "build:test": "vue-tsc && vite build --mode test",
     "report": "cross-env REPORT=true npm run build",
     "preview": "vite preview",
@@ -38,10 +38,10 @@
     "@tanstack/vue-store": "^0.5.6",
     "@tinymce/tinymce-vue": "^6.1.0",
     "@vee-validate/zod": "^4.15.0",
-    "@visactor/vchart": "^1.13.3",
-    "@vueuse/components": "^12.4.0",
-    "@vueuse/core": "^12.4.0",
-    "@vueuse/integrations": "^12.4.0",
+    "@visactor/vchart": "^1.13.4",
+    "@vueuse/components": "^12.5.0",
+    "@vueuse/core": "^12.5.0",
+    "@vueuse/integrations": "^12.5.0",
     "add": "^2.0.6",
     "animate.css": "^4.1.1",
     "axios": "^1.7.8",
@@ -62,18 +62,18 @@
     "hotkeys-js": "^3.13.9",
     "js-base64": "^3.7.7",
     "lodash-es": "^4.17.21",
-    "lucide-vue-next": "^0.471.0",
+    "lucide-vue-next": "^0.474.0",
     "medium-zoom": "^1.1.0",
     "mitt": "^3.0.1",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^8.2.0",
-    "pinia": "^2.2.8",
+    "pinia": "^2.3.1",
     "pinyin-pro": "^3.26.0",
     "print-js": "^1.6.0",
     "qrcode": "^1.5.4",
-    "qs": "^6.13.1",
+    "qs": "^6.14.0",
     "radix-vue": "^1.9.12",
     "scule": "^1.3.0",
     "sortablejs": "^1.15.6",
@@ -82,13 +82,13 @@
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
     "timeago.js": "^4.0.2",
-    "tinymce": "^7.6.0",
+    "tinymce": "^7.6.1",
     "v-wave": "^3.0.2",
     "vconsole": "^3.15.1",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-codemirror": "^6.1.1",
-    "vue-currency-input": "^3.1.0",
+    "vue-currency-input": "^3.2.1",
     "vue-esign": "^1.1.4",
     "vue-hooks-plus": "^2.2.1",
     "vue-i18n": "^11.0.1",
@@ -98,16 +98,16 @@
     "vue3-blocks-tree": "^0.6.2",
     "vue3-count-to": "^1.1.2",
     "vxe-pc-ui": "^4.3.67",
-    "vxe-table": "4.10.0",
+    "vxe-table": "^4.10.5",
     "watermark-js-plus": "^1.5.7",
     "xe-utils": "^3.7.0",
     "zod": "^3.24.1",
     "zod-defaults": "^0.1.3"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.13.0",
+    "@antfu/eslint-config": "^3.16.0",
     "@faker-js/faker": "^9.4.0",
-    "@iconify/json": "^2.2.294",
+    "@iconify/json": "^2.2.299",
     "@iconify/vue": "^4.3.0",
     "@stylistic/stylelint-config": "^2.0.0",
     "@types/lodash-es": "^4.17.12",
@@ -115,11 +115,11 @@
     "@types/nprogress": "^0.2.3",
     "@types/path-browserify": "^1.0.3",
     "@types/qrcode": "^1.5.5",
-    "@types/qs": "^6.9.17",
+    "@types/qs": "^6.9.18",
     "@types/sortablejs": "^1.15.8",
     "@types/splitpanes": "^2.2.6",
-    "@unocss/eslint-plugin": "^65.4.0",
-    "@unocss/preset-legacy-compat": "^65.4.2",
+    "@unocss/eslint-plugin": "^65.4.3",
+    "@unocss/preset-legacy-compat": "^65.4.3",
     "@vitejs/plugin-legacy": "^6.0.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
@@ -129,34 +129,34 @@
     "cross-env": "^7.0.3",
     "eslint": "^9.18.0",
     "esno": "^4.8.0",
-    "fs-extra": "^11.2.0",
+    "fs-extra": "^11.3.0",
     "http-server": "^14.1.1",
-    "inquirer": "^12.3.1",
-    "lint-staged": "^15.3.0",
+    "inquirer": "^12.3.2",
+    "lint-staged": "^15.4.2",
     "npm-run-all2": "^7.0.2",
     "picocolors": "^1.1.1",
     "plop": "^4.0.1",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.1",
     "postcss-nested": "^7.0.2",
     "rollup": "^3.29.5",
     "rollup-plugin-visualizer": "^5.12.0",
-    "sass-embedded": "^1.83.1",
+    "sass-embedded": "^1.83.4",
     "simple-git-hooks": "^2.11.1",
     "stylelint": "^16.12.0",
-    "stylelint-config-recess-order": "^5.1.1",
+    "stylelint-config-recess-order": "^6.0.0",
     "stylelint-config-standard-scss": "^14.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-scss": "^6.10.0",
+    "stylelint-scss": "^6.10.1",
     "svgo": "^3.3.2",
     "terser": "^5.36.0",
     "typescript": "^5.7.3",
-    "unocss": "^65.4.0",
-    "unocss-preset-animations": "^1.1.0",
+    "unocss": "^65.4.3",
+    "unocss-preset-animations": "^1.1.1",
     "unocss-preset-scrollbar": "^0.3.1",
     "unplugin-auto-import": "^19.0.0",
     "unplugin-turbo-console": "^1.11.1",
     "unplugin-vue-components": "^28.0.0",
-    "vite": "^6.0.7",
+    "vite": "^6.0.11",
     "vite-plugin-app-loading": "^0.3.0",
     "vite-plugin-archiver": "^0.1.1",
     "vite-plugin-banner": "^0.8.0",
@@ -164,7 +164,7 @@
     "vite-plugin-env-parse": "^1.0.15",
     "vite-plugin-fake-server": "^2.2.0",
     "vite-plugin-pages": "^0.32.4",
-    "vite-plugin-vue-devtools": "^7.7.0",
+    "vite-plugin-vue-devtools": "^7.7.1",
     "vite-plugin-vue-meta-layouts": "^0.5.1",
     "vue-tsc": "^2.2.0"
   },
