--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc -b && vite build",
     "build:test": "vue-tsc && vite build --mode test",
     "report": "cross-env REPORT=true npm run build",
     "preview": "vite preview",
@@ -98,7 +98,7 @@
     "vue3-blocks-tree": "^0.6.2",
     "vue3-count-to": "^1.1.2",
     "vxe-pc-ui": "^4.3.67",
-    "vxe-table": "^4.10.5",
+    "vxe-table": "4.10.0",
     "watermark-js-plus": "^1.5.7",
     "xe-utils": "^3.7.0",
     "zod": "^3.24.1",
